Add the function of parsing json-string for servlet project.

--- a/servlet/readme
+++ b/servlet/readme
@@ -76,4 +76,20 @@
         commons-beanutils-1.7.0.jar、commons-collections-3.1.jar、commons-lang-2.5.jar、
         commons-logging.jar、ezmorph-1.0.3.jar、json-lib-2.1-jdk15.jar
 
-    http://localhost:8080/submit.html
+    传入对象，需要在输出日志查看输出提交的信息
+        servlet\src\com\servlet\json\SubmitServlet.java
+        servlet\web\submit.html
+
+        http://localhost:8080/submit.html
+
+    获取一个对象
+        servlet\src\com\servlet\json\GetOneObjectServlet.java
+        servlet\web\getOneObject.html
+
+        http://localhost:8080/getOneObject.html
+
+    获取多个对象
+        servlet\src\com\servlet\json\GetManyObjectServlet.java
+        servlet\web\getManyObject.html
+
+        http://localhost:8080/getManyObject.html
